--- a/vt/specs/choice/basic.yaml
+++ b/vt/specs/choice/basic.yaml
@@ -16,7 +16,7 @@ presets:
           nextLine: {}
 
 ui:
-  screens:
+  layouts:
     fi3l:
       name: Choices 
       elements:
@@ -54,7 +54,7 @@ story:
             - id: line1
               presentation:
                 choices:
-                  choiceScreenId: fi3l
+                  layoutId: fi3l
                   items:
                     - text: Choice 1 a
                     - text: Choice 2 b
