--- a/src/schemas/projectData/presentation.yaml
+++ b/src/schemas/projectData/presentation.yaml
@@ -27,7 +27,7 @@ properties:
     type: object
     description: Dialogue display configuration
     properties:
-      dialogueBoxId:
+      layoutId:
         type: string
         description: ID of the dialogue box UI element
       mode:
