rename placement to transform and screen folder to layout
- Replace all occurrences of 'dialogueBoxId' with 'layoutId'
- Replace all occurrences of 'placements' with 'transforms'
- Replace all occurrences of 'placement' with 'transform'
- Rename file vt/specs/visual/placement.yaml to transform.yaml
- Rename folder vt/specs/screen to vt/specs/layout

--- a/spec/data/testVnData.yaml
+++ b/spec/data/testVnData.yaml
@@ -206,7 +206,7 @@ assets:
     alkejf3la:
       fileId: 94lkj289
 
-  placements:
+  transforms:
     iasdlf:
       x: 50%
       y: 50%
@@ -254,7 +254,7 @@ story:
                   items:
                     - id: 39kdfj231
                       visualId: alkejf3la
-                      placementId: iasdlf
+                      transformId: iasdlf
                       animations:
                         in: 3lkj289
             - id: line2
