--- a/src/schemas/projectData/presentation.yaml
+++ b/src/schemas/projectData/presentation.yaml
@@ -74,9 +74,9 @@ properties:
             id:
               type: string
               description: Unique identifier for the character item
-            placementId:
+            transformId:
               type: string
-              description: ID of the placement where character appears
+              description: ID of the transform where character appears
             spriteParts:
               type: array
               description: Array of sprite parts that make up the character
@@ -116,9 +116,9 @@ properties:
             visualId:
               type: string
               description: ID of the visual resource
-            placementId:
+            transformId:
               type: string
-              description: ID of the placement where visual appears
+              description: ID of the transform where visual appears
             animations:
               type: object
               description: Animation effects for visual transitions
