--- a/src/test/data/testVnData.yaml
+++ b/src/test/data/testVnData.yaml
@@ -206,7 +206,7 @@ assets:
     alkejf3la:
       fileId: 94lkj289
 
-  placements:
+  transforms:
     iasdlf:
       x: 50%
       y: 50%
@@ -254,7 +254,7 @@ story:
                   items:
                     - id: 39kdfj231
                       visualId: alkejf3la
-                      placementId: iasdlf
+                      transformId: iasdlf
                       animations:
                         in: 3lkj289
             - id: line2
