--- a/vt/specs/complete/one.yaml
+++ b/vt/specs/complete/one.yaml
@@ -597,7 +597,7 @@ assets:
     alkejf3la:
       fileId: 94lkj289
 
-  placements:
+  transforms:
     iasdlf:
       x: 50%
       y: 50%
@@ -649,7 +649,7 @@ story:
                   items:
                     - id: 39kdfj231
                       visualId: alkejf3la
-                      placementId: iasdlf
+                      transformId: iasdlf
                       animations:
                         in: 3lkj289
             - id: line2
