fix dialogue rendering and remove debug logs
- Replace hardcoded dialogue elements with dynamic layout rendering using layoutId
- Remove unnecessary console.log statements from RouteEngine, system store, and main.js
- Fix typo in selectAssets function name

--- a/src/test/vnDataSelectors.spec_.yaml
+++ b/src/test/vnDataSelectors.spec_.yaml
@@ -85,8 +85,8 @@ suites:
               actions:
                 nextLine: {}
 
-  - name: selectassets
-    exportName: selectassets
+  - name: selectAssets
+    exportName: selectAssets
     cases:
       - name: basic
         in:
