--- a/vt/specs/dialogue/basic.yaml
+++ b/vt/specs/dialogue/basic.yaml
@@ -1,11 +1,10 @@
 ---
-title: 'Sample'
+title: "Sample"
 ---
-
 screen:
   width: 1920
   height: 1080
-  backgroundColor: '#000000'
+  backgroundColor: "#000000"
 
 presets:
   bj342s:
@@ -21,18 +20,18 @@ ui:
       name: Dialogue Screen
       elements:
         - id: dialogue-container
-          type: 'container'
+          type: "container"
           x: 100
           y: 100
           children:
             - id: dialogue-character-name
               type: text
-              text: "${dialogue.character.name}"
+              text: "Hehe ${dialogue.character.name}"
               style:
                 fontSize: 24
                 fill: "white"
             - id: dialogue-text
-              type: 'text'
+              type: "text"
               y: 100
               text: "${dialogue.text}"
               style:
@@ -42,7 +41,7 @@ ui:
 assets:
   characters:
     ajf34a:
-      name: Character Name
+      name: Character A
 
 story:
   initialSceneId: ajfl3a
@@ -65,21 +64,18 @@ story:
             - id: line2
               presentation:
                 dialogue:
-                  layoutId: fi3l
                   mode: dialogue
                   text: This is the second line of dialogue. Click to continue.
                   characterId: ajf34a
             - id: line3
               presentation:
                 dialogue:
-                  layoutId: fi3l
                   mode: dialogue
                   text: Here we are on the third line. The dialogue system is working!
                   characterId: ajf34a
             - id: line4
               presentation:
                 dialogue:
-                  layoutId: fi3l
                   mode: dialogue
                   text: This is the final line. Thank you for testing the dialogue feature.
                   characterId: ajf34a
