--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "route-engine-js",
-  "version": "0.0.2-rc2",
+  "version": "0.0.2-rc3",
   "type": "module",
   "main": "dist/RouteEngine.js",
   "exports": {
@@ -17,8 +17,7 @@
     "lint": "bunx prettier src tests -c",
     "lint:fix": "bunx prettier src tests -w",
     "coverage": "vitest run --coverage",
-    "vt:generate": "bun run esbuild.js && rtgl vt generate --skip-screenshots",
-    "prepublishOnly": "bun run build"
+    "vt:generate": "bun run esbuild.js && rtgl vt generate --skip-screenshots"
   },
   "dependencies": {
     "immer": "^10.1.1",
