--- a/vt/specs/background/animation.yaml
+++ b/vt/specs/background/animation.yaml
@@ -58,7 +58,8 @@ story:
             - id: line1
               presentation:
                 background:
-                  imageId: alkejf3la
+                  resourceId: alkejf3la
+                  resourceType: image
                   animations:
                     in: 3lkj289
             - id: line2
