--- a/vt/specs/character/basic.yaml
+++ b/vt/specs/character/basic.yaml
@@ -57,7 +57,8 @@ story:
             - id: line1
               presentation:
                 background:
-                  imageId: alkejf3la
+                  resourceId: alkejf3la
+                  resourceType: image
                 character:
                   items:
                     - id: "laj389d"
@@ -70,7 +71,8 @@ story:
             - id: line2
               presentation:
                 background:
-                  imageId: alkejf3la
+                  resourceId: alkejf3la
+                  resourceType: image
                 character:
                   items:
                     - id: "laj389d"
