--- a/vt/specs/layout/basic.yaml
+++ b/vt/specs/layout/basic.yaml
@@ -68,7 +68,4 @@ story:
           name: Section 1
           lines:
             - id: line1
-              presentation:
-                layout:
-                  id: 3k3k38
-                  layoutId: j3i8dk32
+              presentation: {}
